
* Changes in Cdecl 9.6

** Specific languages in error messages
Rather than just say "<feature> is not supported in <current-lang>", now says
"<feature> is not supported until <later-lang>."

** More constructor & destructor warning checks
Constructors and destructors are now checked for `throw`.  Constructor
parameters are now checked for warnings.

** Fixed `thread_local`
`thread_local` is now correctly allowed only in C11 or C++11 or later.

** `throw()` in C++20
`throw()` is no longer supported in C++20.


* Changes in Cdecl 9.5.1

** Functions as parameters
A function as a parameter is now automatically converted to a pointer to
function per 6.3.2.1(4) of the C standard.

** `[[` and `]]` "tokens" allow whitespace
The `[[` and `]]` "tokens" now allow whitespace between them (since they're not
distinct tokens).

** `AX_CHECK_COMPILE_FLAG`
Replaced used of `AX_CFLAGS_GCC_OPTION` with `AX_CHECK_COMPILE_FLAG`.


* Changes in Cdecl 9.5

** Added `enum`, `class`, `struct`, and `union` attribute specifier support
Attributes can now also be specified for `enum`, `class`, `struct`, and `union`
declarations:

    cdecl> explain [[maybe_unused]] struct S x // previously supported
    cdecl> explain struct [[maybe_unused]] S x // now also supported

Unfortunately, the resulting English is the same for both:

    declare x as maybe-unused structure S

because there's no other (obvious) way to word the English so it's different
between cases.

** "Did you mean ...?" for attributes
"Did you mean ...?" suggestions have been added for misspelled attributes.

** Improved "unknown" error messages
When a name is unknown in the current language but exists in a later language,
the type of name is now used in the error message.

** Added fixed-type `enum` support
Fixed-type enumerations are now supported:

    c++decl> explain enum E : char8_t
    define E as enumeration E of type char8_t

** Added `extern "C"` support
`extern "C"` declarations are now supported.
