@@ -396,6 +396,23 @@ c_lang_id_t c_lang_oldest( c_lang_id_t lang_ids ) {
 }
 
 /**
+ * Gets the "coarse" name of \a lang_ids.
+ *
+ * @param lang_ids The bitwise-or of language(s).
+ * @return If:
+ *  + \a lang_ids contains any version of both C and C++, returns NULL;
+ *    otherwise:
+ *  + \a lang_ids contains any version of C, returns `"C"`.
+ *  + \a lang_ids contains any version of C++, returns `"C++"`.
+ */
+C_LANG_INLINE PJL_WARN_UNUSED_RESULT
+char const* c_lang_coarse_name( c_lang_id_t lang_ids ) {
+  return c_lang_is_c( lang_ids ) ?
+    (c_lang_is_cpp( lang_ids ) ? NULL : "C") :
+    "C++";
+}
+
+/**
  * Gets the printable name of the oldest language among \a lang_ids.
  *
  * @param lang_ids The bitwise-or of language(s).
